--- a/insights/css/insights-dev.css
+++ b/insights/css/insights-dev.css
@@ -1,6 +1,6 @@
 /**
  * EY Insights CSS
- * Last update: 30 September 2016 4:46 PM
+ * Last update: 13 October 2016 9:34 AM - JD
  */
 
 .js body {
@@ -74,6 +74,9 @@
     font-size: 48px;
     font-weight: normal;
     color: #333333;
+}
+#tile-container {
+  height: auto!important;
 }
 #tile-container h5 {
     margin-top: 10px;
