--- a/insights/css/insights-dev.css
+++ b/insights/css/insights-dev.css
@@ -1,6 +1,6 @@
 /**
  * EY Insights CSS
- * Last update: 13 October 2016 9:34 AM - JD
+ * Last update: 14 October 2016 10:18 AM - JD
  */
 
 .js body {
@@ -74,9 +74,6 @@
     font-size: 48px;
     font-weight: normal;
     color: #333333;
-}
-#tile-container {
-  height: auto!important;
 }
 #tile-container h5 {
     margin-top: 10px;
@@ -630,6 +627,19 @@
 .serviceslist li a.subnavToggle:hover {
     color: gray;
 }
+
+.mlinks li.nav-current {
+  background-color: #444;
+}
+.mlinks li.nav-current a {
+  color: #ccc;
+}
+
+.mlinks li a.active {
+  background-color: #ffe600;
+  color: #333;
+}
+
 ol.local-sub li {
     list-style-type: none;
 }
